# WTHR-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
Editor/: CMakeLists.txt
Editor/include/: AppUI.hpp  Application.hpp  Editor.hpp  InputManager.hpp  WindowManager.hpp
Editor/src/: AppUI.cpp  Application.cpp  Editor.cpp  TextEditor.cpp  WindowManager.cpp  main.cpp
Physics/include/: CallBacks.hpp  PhysicsWorld.hpp  RigidBody.hpp
Physics/src/: PhysicsWorld.cpp
Runtime/src/: RuntimeApp.cpp  Window.cpp
Tests/: FramebufferTests.cpp  MainTests.cpp  NetworkClientTests.cpp  NetworkServerTests.cpp  NetworkTests.cpp
WTHR/: CMakeLists.txt
WTHR/include/: AssetCompiler.hpp  AudioManager.hpp  Components.hpp  Framebuffer.hpp  GLContextWorker.hpp  InputManager.hpp  Mesh.hpp  Model.hpp  NetworkClient.hpp  NetworkManager.hpp  NetworkServer.hpp  NetworkTypes.hpp  PrimitiveShape.hpp  Renderer.hpp  Scene.hpp  ScriptEditor.hpp  Scripts.hpp  Texture.hpp
WTHR/src/: AssetCompiler.cpp  AudioManager.cpp  InputManager.cpp  Mesh.cpp  Model.cpp  NetworkClient.cpp  NetworkManager.cpp  NetworkServer.cpp  Renderer.cpp  Scene.cpp  ScriptEditor.cpp  Scripts.cpp
assets/scripts/: player_movement.lua
assets/shaders/: default.frag  default.vert  picking.frag  picking.vert  simple_color.frag  simple_color.vert  thumb.frag  thumb.vert
